test/fails/bad_functions/extern4.lgl
declare color f();
tag color is vec3; //Out of order

void main() {
    print f();
    return;
}